--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="OK">
+   <widget class="QPushButton" name="Start">
     <property name="geometry">
      <rect>
       <x>300</x>
@@ -34,7 +34,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>OK</string>
+     <string>Start</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit">
@@ -47,17 +47,14 @@
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="Game">
+   <widget class="QComboBox" name="comboBox">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>50</x>
       <y>210</y>
-      <width>80</width>
+      <width>201</width>
       <height>22</height>
      </rect>
-    </property>
-    <property name="text">
-     <string>Game</string>
     </property>
    </widget>
   </widget>
